[figures] disordered tracing: full grain pruning examples

--- a/fig-disordered-tracing.ipynb
+++ b/fig-disordered-tracing.ipynb
@@ -25,14 +25,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c7198b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-disordered-tracing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9892d13f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pruning_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/height-pruning\")\n",
-    "pruning_saved_outputs_dir = pruning_dir / \"saved_outputs\"\n",
-    "\n",
-    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-disordered-tracing\")"
+    "height_pruning_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/height-pruning\")\n",
+    "height_pruning_saved_outputs_dir = height_pruning_dir / \"saved_outputs\""
    ]
   },
   {
@@ -43,51 +51,88 @@
    "outputs": [],
    "source": [
     "# height pruning example\n",
-    "pruning_height_pruned_filename = Path(\"properly-pruned-20231005_unknot_SC_3ng_mgni.0_00023.topostats\")\n",
-    "pruning_height_pruned_file = pruning_saved_outputs_dir / pruning_height_pruned_filename\n",
+    "height_pruning_height_pruned_filename = Path(\"properly-pruned-20231005_unknot_SC_3ng_mgni.0_00023.topostats\")\n",
+    "pruning_height_pruned_file = height_pruning_saved_outputs_dir / height_pruning_height_pruned_filename\n",
     "\n",
     "loadscans = LoadScans([pruning_height_pruned_file], channel=\"dummy\")\n",
     "loadscans.get_data()\n",
     "loadscans_image_dicts = loadscans.img_dict\n",
     "\n",
-    "pruning_height_pruned_image_data = loadscans_image_dicts[pruning_height_pruned_filename.stem]\n",
-    "pruning_height_pruned_p2nm = pruning_height_pruned_image_data[\"pixel_to_nm_scaling\"]\n",
-    "pruning_height_original_skeleton = pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
+    "height_pruning_height_pruned_image_data = loadscans_image_dicts[height_pruning_height_pruned_filename.stem]\n",
+    "height_pruning_height_pruned_p2nm = height_pruning_height_pruned_image_data[\"pixel_to_nm_scaling\"]\n",
+    "height_pruning_height_original_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
     "    \"skeleton\"\n",
     "]\n",
-    "pruning_height_pruned_skeleton = pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
+    "height_pruning_height_pruned_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
     "    \"pruned_skeleton\"\n",
     "]\n",
-    "pruning_height_pruned_bbox = pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"bbox\"]\n",
-    "pruning_height_pruned_crop = pruning_height_pruned_image_data[\"image\"][\n",
-    "    pruning_height_pruned_bbox[0] : pruning_height_pruned_bbox[2],\n",
-    "    pruning_height_pruned_bbox[1] : pruning_height_pruned_bbox[3],\n",
+    "height_pruning_height_pruned_bbox = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"bbox\"]\n",
+    "height_pruning_height_pruned_crop = height_pruning_height_pruned_image_data[\"image\"][\n",
+    "    height_pruning_height_pruned_bbox[0] : height_pruning_height_pruned_bbox[2],\n",
+    "    height_pruning_height_pruned_bbox[1] : height_pruning_height_pruned_bbox[3],\n",
     "]\n",
-    "pruning_height_pruned_mask_crop = pruning_height_pruned_image_data[\"grain_tensors\"][\"above\"][:, :, 1][\n",
-    "    pruning_height_pruned_bbox[0] : pruning_height_pruned_bbox[2],\n",
-    "    pruning_height_pruned_bbox[1] : pruning_height_pruned_bbox[3],\n",
+    "height_pruning_height_pruned_mask_crop = height_pruning_height_pruned_image_data[\"grain_tensors\"][\"above\"][:, :, 1][\n",
+    "    height_pruning_height_pruned_bbox[0] : height_pruning_height_pruned_bbox[2],\n",
+    "    height_pruning_height_pruned_bbox[1] : height_pruning_height_pruned_bbox[3],\n",
     "]\n",
-    "print(f\"crop size: {pruning_height_pruned_crop.shape} px, {pruning_height_pruned_crop.shape[0]*pruning_height_pruned_p2nm:.1f} x {pruning_height_pruned_crop.shape[1]*pruning_height_pruned_p2nm:.1f} nm\")\n",
+    "print(f\"crop size: {height_pruning_height_pruned_crop.shape} px, {height_pruning_height_pruned_crop.shape[0]*height_pruning_height_pruned_p2nm:.1f} x {height_pruning_height_pruned_crop.shape[1]*height_pruning_height_pruned_p2nm:.1f} nm\")\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "ax.imshow(pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
-    "    np.ma.masked_where(pruning_height_pruned_mask_crop == 0, pruning_height_pruned_mask_crop), cmap=\"summer\", alpha=1\n",
+    "    np.ma.masked_where(height_pruning_height_pruned_mask_crop == 0, height_pruning_height_pruned_mask_crop), cmap=\"summer\", alpha=1\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-mask.png\")\n",
     "plt.show()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "ax.imshow(pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(np.ma.masked_where(pruning_height_original_skeleton == 0, pruning_height_original_skeleton), cmap=\"summer\")\n",
+    "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(np.ma.masked_where(height_pruning_height_original_skeleton == 0, height_pruning_height_original_skeleton), cmap=\"summer\")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-original.png\")\n",
     "plt.show()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
-    "ax.imshow(pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
-    "    np.ma.masked_where(np.bool(pruning_height_pruned_skeleton) == 0, pruning_height_pruned_skeleton), cmap=\"summer\"\n",
+    "    np.ma.masked_where(np.bool(height_pruning_height_pruned_skeleton) == 0, height_pruning_height_pruned_skeleton), cmap=\"summer\"\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-pruned.png\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "405b8086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "whole_pruning_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/fig-skeletonisation-pruning-full\")\n",
+    "whole_pruning_saved_outputs_dir = whole_pruning_dir / \"output_fig_skeletonisation_pruning_example\" / \"processed\"\n",
+    "whole_pruning_filename = Path(\"20250528_picoz_0RA_tip_0.0_00013.topostats\")\n",
+    "whole_pruning_file = whole_pruning_saved_outputs_dir / whole_pruning_filename\n",
+    "loadscans = LoadScans([whole_pruning_file], channel=\"dummy\")\n",
+    "loadscans.get_data()\n",
+    "loadscans_image_dicts = loadscans.img_dict\n",
+    "whole_pruning_image_data = loadscans_image_dicts[whole_pruning_filename.stem]\n",
+    "whole_pruning_p2nm = whole_pruning_image_data[\"pixel_to_nm_scaling\"]\n",
+    "whole_pruning_original_skeleton = whole_pruning_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"skeleton\"]\n",
+    "whole_pruning_pruned_skeleton = whole_pruning_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"pruned_skeleton\"]\n",
+    "whole_pruning_grain_bbox = whole_pruning_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"bbox\"]\n",
+    "whole_pruning_crop = whole_pruning_image_data[\"image\"][\n",
+    "    whole_pruning_grain_bbox[0] : whole_pruning_grain_bbox[2],\n",
+    "    whole_pruning_grain_bbox[1] : whole_pruning_grain_bbox[3],\n",
+    "]\n",
+    "print(f\"crop size: {whole_pruning_crop.shape} px, {whole_pruning_crop.shape[0]*whole_pruning_p2nm:.1f} x {whole_pruning_crop.shape[1]*whole_pruning_p2nm:.1f} nm\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(np.ma.masked_where(whole_pruning_original_skeleton == 0, whole_pruning_original_skeleton), cmap=\"Blues_r\")\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full.png\")\n",
+    "plt.show()\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(np.ma.masked_where(np.bool(whole_pruning_pruned_skeleton) == 0, whole_pruning_pruned_skeleton), cmap=\"Blues_r\")\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full-pruned.png\")\n",
     "plt.show()"
    ]
   }
