--- a/fig-disordered-tracing.ipynb
+++ b/fig-disordered-tracing.ipynb
@@ -60,13 +60,15 @@
     "\n",
     "height_pruning_height_pruned_image_data = loadscans_image_dicts[height_pruning_height_pruned_filename.stem]\n",
     "height_pruning_height_pruned_p2nm = height_pruning_height_pruned_image_data[\"pixel_to_nm_scaling\"]\n",
-    "height_pruning_height_original_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
-    "    \"skeleton\"\n",
+    "height_pruning_height_original_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\n",
+    "    \"grain_0\"\n",
+    "][\"skeleton\"]\n",
+    "height_pruning_height_pruned_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\n",
+    "    \"grain_0\"\n",
+    "][\"pruned_skeleton\"]\n",
+    "height_pruning_height_pruned_bbox = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
+    "    \"bbox\"\n",
     "]\n",
-    "height_pruning_height_pruned_skeleton = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\n",
-    "    \"pruned_skeleton\"\n",
-    "]\n",
-    "height_pruning_height_pruned_bbox = height_pruning_height_pruned_image_data[\"disordered_traces\"][\"above\"][\"grain_0\"][\"bbox\"]\n",
     "height_pruning_height_pruned_crop = height_pruning_height_pruned_image_data[\"image\"][\n",
     "    height_pruning_height_pruned_bbox[0] : height_pruning_height_pruned_bbox[2],\n",
     "    height_pruning_height_pruned_bbox[1] : height_pruning_height_pruned_bbox[3],\n",
@@ -75,25 +77,33 @@
     "    height_pruning_height_pruned_bbox[0] : height_pruning_height_pruned_bbox[2],\n",
     "    height_pruning_height_pruned_bbox[1] : height_pruning_height_pruned_bbox[3],\n",
     "]\n",
-    "print(f\"crop size: {height_pruning_height_pruned_crop.shape} px, {height_pruning_height_pruned_crop.shape[0]*height_pruning_height_pruned_p2nm:.1f} x {height_pruning_height_pruned_crop.shape[1]*height_pruning_height_pruned_p2nm:.1f} nm\")\n",
+    "print(\n",
+    "    f\"crop size: {height_pruning_height_pruned_crop.shape} px, {height_pruning_height_pruned_crop.shape[0]*height_pruning_height_pruned_p2nm:.1f} x {height_pruning_height_pruned_crop.shape[1]*height_pruning_height_pruned_p2nm:.1f} nm\"\n",
+    ")\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
-    "    np.ma.masked_where(height_pruning_height_pruned_mask_crop == 0, height_pruning_height_pruned_mask_crop), cmap=\"summer\", alpha=1\n",
+    "    np.ma.masked_where(height_pruning_height_pruned_mask_crop == 0, height_pruning_height_pruned_mask_crop),\n",
+    "    cmap=\"summer\",\n",
+    "    alpha=1,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-mask.png\")\n",
     "plt.show()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(np.ma.masked_where(height_pruning_height_original_skeleton == 0, height_pruning_height_original_skeleton), cmap=\"summer\")\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(height_pruning_height_original_skeleton == 0, height_pruning_height_original_skeleton),\n",
+    "    cmap=\"summer\",\n",
+    ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-original.png\")\n",
     "plt.show()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
-    "    np.ma.masked_where(np.bool(height_pruning_height_pruned_skeleton) == 0, height_pruning_height_pruned_skeleton), cmap=\"summer\"\n",
+    "    np.ma.masked_where(np.bool(height_pruning_height_pruned_skeleton) == 0, height_pruning_height_pruned_skeleton),\n",
+    "    cmap=\"summer\",\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-pruned.png\")\n",
     "plt.show()"
@@ -122,7 +132,9 @@
     "    whole_pruning_grain_bbox[0] : whole_pruning_grain_bbox[2],\n",
     "    whole_pruning_grain_bbox[1] : whole_pruning_grain_bbox[3],\n",
     "]\n",
-    "print(f\"crop size: {whole_pruning_crop.shape} px, {whole_pruning_crop.shape[0]*whole_pruning_p2nm:.1f} x {whole_pruning_crop.shape[1]*whole_pruning_p2nm:.1f} nm\")\n",
+    "print(\n",
+    "    f\"crop size: {whole_pruning_crop.shape} px, {whole_pruning_crop.shape[0]*whole_pruning_p2nm:.1f} x {whole_pruning_crop.shape[1]*whole_pruning_p2nm:.1f} nm\"\n",
+    ")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
@@ -131,7 +143,9 @@
     "plt.show()\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(np.ma.masked_where(np.bool(whole_pruning_pruned_skeleton) == 0, whole_pruning_pruned_skeleton), cmap=\"Blues_r\")\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(np.bool(whole_pruning_pruned_skeleton) == 0, whole_pruning_pruned_skeleton), cmap=\"Blues_r\"\n",
+    ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full-pruned.png\")\n",
     "plt.show()"
    ]
