--- a/fig-masking.ipynb
+++ b/fig-masking.ipynb
@@ -81,12 +81,17 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(np.zeros(image.shape), cmap=\"binary_r\")\n",
+    "edge_vet_no_vet_diff = no_vet_mask_tensor ^ edge_vet_mask_tensor\n",
+    "ax.imshow(np.ma.masked_where(edge_vet_no_vet_diff==0, edge_vet_no_vet_diff), cmap=\"cool\", alpha=0.5)\n",
     "ax.imshow(np.ma.masked_where(edge_vet_mask_tensor == 0, image), cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.savefig(figure_dir / \"fig-grain-masking-edge-vet.png\")\n",
     "plt.show()\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(np.zeros(image.shape), cmap=\"binary_r\")\n",
+    "size_vet_edge_vet_diff = edge_vet_mask_tensor ^ size_vet_mask_tensor\n",
+    "ax.imshow(np.ma.masked_where(edge_vet_no_vet_diff==0, edge_vet_no_vet_diff), cmap=\"cool\", alpha=0.5)\n",
+    "ax.imshow(np.ma.masked_where(size_vet_edge_vet_diff==0, size_vet_edge_vet_diff), cmap=\"cool_r\", alpha=0.7)\n",
     "ax.imshow(np.ma.masked_where(size_vet_mask_tensor == 0, image), cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.savefig(figure_dir / \"fig-grain-masking-size-vet.png\")\n",
     "plt.show()"
