[figures] ordered tracing: use a better pair of overlapping molecules (thanks Tom)

--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -223,10 +223,12 @@
    "outputs": [],
    "source": [
     "# overlapping_molecules_image_file = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules/output/processed/20250721_MC1Rx_8ng_IncMg_ImageNI_2.0_00003.topostats\")\n",
-    "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules\")\n",
+    "# base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/overlapping-molecules\")\n",
+    "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/more-overlapping-minicircles\")\n",
     "output_dir = base_dir / \"output/processed\"\n",
     "# filename = \"20240207_mc339_-1_Ni_3.5.0_00004.topostats\"\n",
-    "filename = \"20240424_min2mc339_3ng_434repr_20ng.0_00043.topostats\"\n",
+    "# filename = \"20240424_min2mc339_3ng_434repr_20ng.0_00043.topostats\"\n",
+    "filename = \"20251016_natmc339_10ng_nickel.0_00000.topostats\"\n",
     "overlapping_molecules_image_file = output_dir / filename\n",
     "assert overlapping_molecules_image_file.exists()\n",
     "\n",
@@ -244,7 +246,7 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "overlapping_grain_id = \"grain_11\"\n",
+    "overlapping_grain_id = \"grain_1\"\n",
     "overlapping_grain_bbox = overlapping_molecules_image_dict[\"splining\"][\"above\"][overlapping_grain_id][\"mol_0\"][\"bbox\"]\n",
     "overlapping_crop = overlapping_molecules_image[\n",
     "    overlapping_grain_bbox[0] : overlapping_grain_bbox[2], overlapping_grain_bbox[1] : overlapping_grain_bbox[3]\n",
