--- a/fig-dataset-separation.ipynb
+++ b/fig-dataset-separation.ipynb
@@ -19,6 +19,11 @@
     "colormap = Colormap()\n",
     "cmap = colormap.get_cmap()\n",
     "\n",
+    "# matplotlib use arial\n",
+    "plt.rcParams[\"font.family\"] = \"Arial\"\n",
+    "axeslabelfontsize = 20\n",
+    "axestickfontsize = 18\n",
+    "\n",
     "vmin = -3\n",
     "vmax = 4"
    ]
@@ -144,14 +149,14 @@
     "\n",
     "order = [\"data/supercoiled\", \"data/nicked\"]\n",
     "df_counts = df_counts.reindex(order)\n",
-    "df_percents = df_percents.reindex(order)\n",
+    "df_percents = df_percents.reindex(order) * 100\n",
     "\n",
     "df_percents.plot(kind=\"bar\", stacked=True, ax=ax, width=0.7, colormap=\"Blues_r\")\n",
     "ax.margins(x=0.1)\n",
     "ax.set_xticks(ticks=[0, 1])\n",
     "ax.set_xticklabels(labels=[\"Supercoiled\", \"Nicked\"], rotation=0)\n",
-    "ax.set_ylabel(\"Percentage\", fontsize=16)\n",
-    "ax.set_xlabel(\"\")\n",
+    "ax.set_ylabel(\"Percentage\", fontsize=axeslabelfontsize)\n",
+    "ax.set_xlabel(\"\", fontname=\"Arial\")\n",
     "# line thickness for axes thicker\n",
     "axes_linewidth = 2\n",
     "ax.spines[\"top\"].set_linewidth(axes_linewidth)\n",
@@ -159,9 +164,9 @@
     "ax.spines[\"left\"].set_linewidth(axes_linewidth)\n",
     "ax.spines[\"bottom\"].set_linewidth(axes_linewidth)\n",
     "# make y ticks be integers only\n",
-    "ax.set_yticks(ticks=np.arange(0, 1.1, 0.1))\n",
+    "ax.set_yticks(ticks=np.arange(0, 110, 10))\n",
     "# text size\n",
-    "ax.tick_params(axis=\"both\", which=\"major\", labelsize=16)\n",
+    "ax.tick_params(axis=\"both\", which=\"major\", labelsize=axeslabelfontsize)\n",
     "# legend\n",
     "ax.set_xlim(-0.5, 2.5)\n",
     "ax.legend(title=\"No. crossings\", title_fontsize=14, fontsize=12, loc=\"upper right\", frameon=False)\n",
@@ -251,6 +256,8 @@
     "    x=\"basename\",\n",
     "    y=\"total_contour_length\",\n",
     "    showfliers=False,\n",
+    "    # line thickness\n",
+    "    linewidth=3,\n",
     ")\n",
     "sns.stripplot(\n",
     "    data=remove_datapoints_outside_n_std(df=df_allstats, column=\"total_contour_length\", n_std=3),\n",
@@ -263,7 +270,7 @@
     "    alpha=0.7,\n",
     ")\n",
     "ax.set_xlabel(\"\")\n",
-    "ax.set_ylabel(\"Plasmid length (nm)\", fontsize=16)\n",
+    "ax.set_ylabel(\"Plasmid length (nm)\", fontsize=axeslabelfontsize)\n",
     "# line thickness for axes thicker\n",
     "axes_linewidth = 2\n",
     "ax.spines[\"top\"].set_linewidth(axes_linewidth)\n",
@@ -271,8 +278,8 @@
     "ax.spines[\"left\"].set_linewidth(axes_linewidth)\n",
     "ax.spines[\"bottom\"].set_linewidth(axes_linewidth)\n",
     "ax.set_xticks(ticks=[0, 1])\n",
-    "ax.set_xticklabels(labels=[\"Supercoiled\", \"Nicked\"])\n",
-    "ax.tick_params(axis=\"both\", which=\"major\", labelsize=16)\n",
+    "ax.set_xticklabels(labels=[\"Supercoiled\", \"Nicked\"], fontsize=axeslabelfontsize)\n",
+    "ax.tick_params(axis=\"both\", which=\"major\", labelsize=axestickfontsize)\n",
     "plt.savefig(figure_dir / f\"fig-dataset-separation-boxplot-contour-length\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
