[figures] make a plotting script for the height biasing masks, make colours more consistent

--- a/fig-disordered-tracing.ipynb
+++ b/fig-disordered-tracing.ipynb
@@ -14,12 +14,37 @@
     "import matplotlib.pyplot as plt\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plotting import Colormap\n",
+    "import matplotlib.colors as mcolors\n",
     "\n",
     "colormap = Colormap()\n",
     "cmap = colormap.get_cmap()\n",
     "vmin = -3\n",
     "vmax = 4\n",
-    "square_markersize_figsize_20 = 3.8"
+    "square_markersize_figsize_20 = 3.8\n",
+    "good_pixels_colormap = \"cool\"\n",
+    "good_pixels_alpha = 0.8\n",
+    "bad_pixels_colormap = \"cool_r\"\n",
+    "bad_pixels_alpha = 0.8\n",
+    "regular_pixels_colormap = \"gray\"\n",
+    "regular_pixels_alpha = 0.3\n",
+    "branch_1_color = \"orange\"\n",
+    "branch_2_color = \"cornflowerblue\"\n",
+    "good_mask_color = \"#3792AF\"\n",
+    "good_mask_alpha = 0.9\n",
+    "\n",
+    "\n",
+    "def overlay_mask(mask: npt.NDArray, colour: str) -> None:\n",
+    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
+    "    # Convert colour to RGBA with specified alpha\n",
+    "    rgba = mcolors.to_rgba(colour, good_mask_alpha)\n",
+    "    # Create an RGBA image where the mask is applied\n",
+    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
+    "    # Apply colour to the mask by multiplying each channel by the mask\n",
+    "    for i in range(3):  # RGB channels\n",
+    "        colored_mask[..., i] = mask * rgba[i]\n",
+    "    # Apply alpha channel\n",
+    "    colored_mask[..., 3] = mask * rgba[3]\n",
+    "    plt.imshow(colored_mask)"
    ]
   },
   {
@@ -80,30 +105,29 @@
     "print(\n",
     "    f\"crop size: {height_pruning_height_pruned_crop.shape} px, {height_pruning_height_pruned_crop.shape[0]*height_pruning_height_pruned_p2nm:.1f} x {height_pruning_height_pruned_crop.shape[1]*height_pruning_height_pruned_p2nm:.1f} nm\"\n",
     ")\n",
-    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(\n",
-    "    np.ma.masked_where(height_pruning_height_pruned_mask_crop == 0, height_pruning_height_pruned_mask_crop),\n",
-    "    cmap=\"summer\",\n",
-    "    alpha=1,\n",
-    ")\n",
+    "mask = np.ma.masked_where(height_pruning_height_pruned_mask_crop == 0, height_pruning_height_pruned_mask_crop)\n",
+    "overlay_mask(mask, good_mask_color)\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-mask.png\")\n",
     "plt.show()\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(height_pruning_height_original_skeleton == 0, height_pruning_height_original_skeleton),\n",
-    "    cmap=\"summer\",\n",
+    "    cmap=bad_pixels_colormap,\n",
+    "    alpha=bad_pixels_alpha,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-original.png\")\n",
     "plt.show()\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(height_pruning_height_pruned_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
     "    np.ma.masked_where(np.bool(height_pruning_height_pruned_skeleton) == 0, height_pruning_height_pruned_skeleton),\n",
-    "    cmap=\"summer\",\n",
+    "    cmap=good_pixels_colormap,\n",
+    "    alpha=good_pixels_alpha,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-height-pruning-pruned.png\")\n",
     "plt.show()"
@@ -136,17 +160,110 @@
     "    f\"crop size: {whole_pruning_crop.shape} px, {whole_pruning_crop.shape[0]*whole_pruning_p2nm:.1f} x {whole_pruning_crop.shape[1]*whole_pruning_p2nm:.1f} nm\"\n",
     ")\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
-    "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(np.ma.masked_where(whole_pruning_original_skeleton == 0, whole_pruning_original_skeleton), cmap=\"Blues_r\")\n",
-    "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full.png\")\n",
-    "plt.show()\n",
-    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ax.imshow(\n",
-    "    np.ma.masked_where(np.bool(whole_pruning_pruned_skeleton) == 0, whole_pruning_pruned_skeleton), cmap=\"Blues_r\"\n",
+    "    np.ma.masked_where(whole_pruning_original_skeleton == 0, whole_pruning_original_skeleton),\n",
+    "    cmap=bad_pixels_colormap,\n",
+    "    alpha=bad_pixels_alpha,\n",
+    ")\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full.png\")\n",
+    "plt.show()\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.imshow(whole_pruning_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(np.bool(whole_pruning_pruned_skeleton) == 0, whole_pruning_pruned_skeleton),\n",
+    "    cmap=good_pixels_colormap,\n",
+    "    alpha=good_pixels_alpha,\n",
     ")\n",
     "plt.savefig(figure_dir / \"fig-disordered-tracing-pruning-full-pruned.png\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c1295d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# height biasing\n",
+    "\n",
+    "height_biasing_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz\")\n",
+    "height_biasing_10_output_file = (\n",
+    "    height_biasing_dir\n",
+    "    / \"output_fig_disordered_tracing_height_bias_10\"\n",
+    "    / \"processed\"\n",
+    "    / \"20250528_picoz_0RA_tip_0.0_00019.topostats\"\n",
+    ")\n",
+    "height_biasing_01_output_file = (\n",
+    "    height_biasing_dir\n",
+    "    / \"output_fig_disordered_tracing_height_bias_01\"\n",
+    "    / \"processed\"\n",
+    "    / \"20250528_picoz_0RA_tip_0.0_00019.topostats\"\n",
+    ")\n",
+    "loadscans_10 = LoadScans([height_biasing_10_output_file], channel=\"dummy\")\n",
+    "loadscans_10.get_data()\n",
+    "loadscans_10_image_dicts = loadscans_10.img_dict\n",
+    "height_biasing_10_image_data = loadscans_10_image_dicts[height_biasing_10_output_file.stem]\n",
+    "height_biasing_10_p2nm = height_biasing_10_image_data[\"pixel_to_nm_scaling\"]\n",
+    "height_biasing_10_mask = height_biasing_10_image_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
+    "height_biasing_10_original_skeleton = height_biasing_10_image_data[\"disordered_traces\"][\"above\"][\"grain_1\"][\"skeleton\"]\n",
+    "height_biasing_10_bbox = height_biasing_10_image_data[\"disordered_traces\"][\"above\"][\"grain_1\"][\"bbox\"]\n",
+    "height_biasing_10_crop = height_biasing_10_image_data[\"image\"][\n",
+    "    height_biasing_10_bbox[0] : height_biasing_10_bbox[2],\n",
+    "    height_biasing_10_bbox[1] : height_biasing_10_bbox[3],\n",
+    "]\n",
+    "height_biasing_10_crop_mask = height_biasing_10_mask[\n",
+    "    height_biasing_10_bbox[0] : height_biasing_10_bbox[2],\n",
+    "    height_biasing_10_bbox[1] : height_biasing_10_bbox[3],\n",
+    "]\n",
+    "print(\n",
+    "    f\"crop size: {height_biasing_10_crop.shape} px, {height_biasing_10_crop.shape[0]*height_biasing_10_p2nm:.1f} x {height_biasing_10_crop.shape[1]*height_biasing_10_p2nm:.1f} nm\"\n",
+    ")\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.imshow(height_biasing_10_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "overlay_mask(np.ma.masked_where(height_biasing_10_crop_mask == 0, height_biasing_10_crop_mask), good_mask_color)\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-height-biasing-10-mask.png\")\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.imshow(height_biasing_10_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(height_biasing_10_original_skeleton == 0, height_biasing_10_original_skeleton),\n",
+    "    cmap=bad_pixels_colormap,\n",
+    "    alpha=bad_pixels_alpha,\n",
+    ")\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-height-biasing-10.png\")\n",
+    "plt.show()\n",
+    "loadscans_01 = LoadScans([height_biasing_01_output_file], channel=\"dummy\")\n",
+    "loadscans_01.get_data()\n",
+    "loadscans_01_image_dicts = loadscans_01.img_dict\n",
+    "height_biasing_01_image_data = loadscans_01_image_dicts[height_biasing_01_output_file.stem]\n",
+    "height_biasing_01_p2nm = height_biasing_01_image_data[\"pixel_to_nm_scaling\"]\n",
+    "height_biasing_01_mask = height_biasing_01_image_data[\"grain_tensors\"][\"above\"][:, :, 1]\n",
+    "height_biasing_01_original_skeleton = height_biasing_01_image_data[\"disordered_traces\"][\"above\"][\"grain_1\"][\"skeleton\"]\n",
+    "height_biasing_01_bbox = height_biasing_01_image_data[\"disordered_traces\"][\"above\"][\"grain_1\"][\"bbox\"]\n",
+    "height_biasing_01_crop = height_biasing_01_image_data[\"image\"][\n",
+    "    height_biasing_01_bbox[0] : height_biasing_01_bbox[2],\n",
+    "    height_biasing_01_bbox[1] : height_biasing_01_bbox[3],\n",
+    "]\n",
+    "print(\n",
+    "    f\"crop size: {height_biasing_01_crop.shape} px, {height_biasing_01_crop.shape[0]*height_biasing_01_p2nm:.1f} x {height_biasing_01_crop.shape[1]*height_biasing_01_p2nm:.1f} nm\"\n",
+    ")\n",
+    "fig, ax = plt.subplots(figsize=(15, 15))\n",
+    "ax.imshow(height_biasing_01_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(height_biasing_10_original_skeleton == 0, height_biasing_10_original_skeleton),\n",
+    "    cmap=bad_pixels_colormap,\n",
+    "    alpha=0.4,\n",
+    ")\n",
+    "ax.imshow(\n",
+    "    np.ma.masked_where(height_biasing_01_original_skeleton == 0, height_biasing_01_original_skeleton),\n",
+    "    cmap=good_pixels_colormap,\n",
+    "    alpha=good_pixels_alpha,\n",
+    ")\n",
+    "plt.savefig(figure_dir / \"fig-disordered-tracing-height-biasing-01.png\")\n",
     "plt.show()"
    ]
   }
