[figures] nodestats: make colours more consistent

--- a/fig-nodestats.ipynb
+++ b/fig-nodestats.ipynb
@@ -19,7 +19,16 @@
     "cmap = colormap.get_cmap()\n",
     "vmin = -3\n",
     "vmax = 4\n",
-    "square_markersize_figsize_20 = 3.8"
+    "square_markersize_figsize_20 = 3.8\n",
+    "figure_text_font = \"Arial\"\n",
+    "good_pixels_colormap = \"cool\"\n",
+    "good_pixels_alpha = 0.8\n",
+    "bad_pixels_colormap = \"cool_r\"\n",
+    "bad_pixels_alpha = 0.8\n",
+    "regular_pixels_colormap = \"gray\"\n",
+    "regular_pixels_alpha = 0.3\n",
+    "branch_1_color = \"orange\"\n",
+    "branch_2_color = \"cornflowerblue\""
    ]
   },
   {
@@ -236,8 +245,8 @@
     "nodes_masked_array = np.ma.masked_where(cropped_convolved_skeletons_nodes == 0, cropped_convolved_skeletons_nodes)\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(base_skeleton_masked_array, cmap=\"gray\", alpha=0.3)\n",
-    "ax.imshow(nodes_masked_array, cmap=\"spring\", alpha=1)\n",
+    "ax.imshow(base_skeleton_masked_array, cmap=regular_pixels_colormap, alpha=regular_pixels_alpha)\n",
+    "ax.imshow(nodes_masked_array, cmap=bad_pixels_colormap, alpha=bad_pixels_alpha)\n",
     "plt.savefig(figure_dir / \"i19-fig-nodestats-convolved-skeletons-grain1-node1.png\")\n",
     "\n",
     "# same for connected nodes\n",
@@ -253,8 +262,8 @@
     "nodes_masked_array = np.ma.masked_where(cropped_connected_nodes_nodes == 0, cropped_connected_nodes_nodes)\n",
     "fig, ax = plt.subplots(figsize=(20, 20))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(base_skeleton_masked_array, cmap=\"gray\", alpha=0.3)\n",
-    "ax.imshow(nodes_masked_array, cmap=\"spring\", alpha=1)\n",
+    "ax.imshow(base_skeleton_masked_array, cmap=regular_pixels_colormap, alpha=regular_pixels_alpha)\n",
+    "ax.imshow(nodes_masked_array, cmap=good_pixels_colormap, alpha=good_pixels_alpha)\n",
     "plt.savefig(figure_dir / \"i19-fig-nodestats-connected-nodes-grain1-node1.png\")"
    ]
   },
@@ -286,8 +295,6 @@
     "    markersize=square_markersize_figsize_20,\n",
     ")\n",
     "# plot the vectors\n",
-    "branch_1_color = \"orange\"\n",
-    "branch_2_color = \"cornflowerblue\"\n",
     "line_width = 2\n",
     "line_scale = 3\n",
     "line_alpha = 1\n",
@@ -593,10 +600,10 @@
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
     "    color=branch_2_color,\n",
     ")\n",
-    "plt.xlabel(\"Distance (nm)\", fontsize=fwhm_plot_axlabel_fontsize)\n",
-    "plt.ylabel(\"Height (nm)\", fontsize=fwhm_plot_axlabel_fontsize)\n",
-    "plt.xticks(fontsize=fwhm_plot_tick_fontsize)\n",
-    "plt.yticks(fontsize=fwhm_plot_tick_fontsize)\n",
+    "plt.xlabel(\"Distance (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
+    "plt.ylabel(\"Height (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
+    "plt.xticks(fontsize=fwhm_plot_tick_fontsize, fontname=figure_text_font)\n",
+    "plt.yticks(fontsize=fwhm_plot_tick_fontsize, fontname=figure_text_font)\n",
     "plt.locator_params(nbins=5)\n",
     "# thicken axes borders\n",
     "for axis in [\"top\", \"bottom\", \"left\", \"right\"]:\n",
