--- a/fig-nodestats.ipynb
+++ b/fig-nodestats.ipynb
@@ -27,8 +27,8 @@
     "bad_pixels_alpha = 0.8\n",
     "regular_pixels_colormap = \"gray\"\n",
     "regular_pixels_alpha = 0.3\n",
-    "branch_1_color = \"orange\"\n",
-    "branch_2_color = \"cornflowerblue\""
+    "branch_underlying_colour = \"#500094\"\n",
+    "branch_overlying_colour = \"#D4A7FF\""
    ]
   },
   {
@@ -40,7 +40,7 @@
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/topostats_2/datasets/20250528_RA_dose_0GY_picoz\")\n",
     "data_dir = base_dir / \"output_fig_nodestats\"\n",
-    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-disordered-tracing\")\n",
+    "figure_dir = Path(\"/Users/sylvi/topo_data/topostats_2/figures/fig-crossing-analysis\")\n",
     "assert figure_dir.exists()\n",
     "assert data_dir.exists()\n",
     "\n",
@@ -306,7 +306,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_0_vector[0] * line_scale,\n",
-    "    color=branch_1_color,\n",
+    "    color=branch_underlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -318,7 +318,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_1_vector[0] * line_scale,\n",
-    "    color=branch_2_color,\n",
+    "    color=branch_overlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -330,7 +330,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_2_vector[0] * line_scale,\n",
-    "    color=branch_2_color,\n",
+    "    color=branch_overlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -342,7 +342,7 @@
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_start_coords[0],\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_vector[1] * line_scale,\n",
     "    image_nodestats_stats_grain1_node2_unmatched_branch_stats_3_vector[0] * line_scale,\n",
-    "    color=branch_1_color,\n",
+    "    color=branch_underlying_colour,\n",
     "    linewidth=line_width,\n",
     "    alpha=line_alpha,\n",
     "    head_width=arrow_head_width,\n",
@@ -366,7 +366,7 @@
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_ordered_coords[:, 1],\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_0_ordered_coords[:, 0],\n",
-    "    color=branch_1_color,\n",
+    "    color=branch_underlying_colour,\n",
     "    alpha=1,\n",
     "    marker=\"s\",\n",
     "    markersize=square_markersize_figsize_20,\n",
@@ -374,7 +374,7 @@
     "plt.plot(\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_1_ordered_coords[:, 1],\n",
     "    image_nodestats_stats_grain1_node2_branch_stats_1_ordered_coords[:, 0],\n",
-    "    color=branch_2_color,\n",
+    "    color=branch_overlying_colour,\n",
     "    alpha=1,\n",
     "    marker=\"s\",\n",
     "    markersize=square_markersize_figsize_20,\n",
@@ -554,7 +554,7 @@
     "    marker=fwhm_plot_marker,\n",
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
-    "    color=branch_1_color,\n",
+    "    color=branch_underlying_colour,\n",
     "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "plt.plot(\n",
@@ -564,7 +564,7 @@
     "    marker=fwhm_plot_marker,\n",
     "    linestyle=fwhm_plot_linestyle,\n",
     "    linewidth=fwhm_plot_linewidth,\n",
-    "    color=branch_2_color,\n",
+    "    color=branch_overlying_colour,\n",
     "    alpha=fwhm_plot_alpha,\n",
     ")\n",
     "fwhm_plot_tick_fontsize = 30\n",
@@ -585,7 +585,7 @@
     "    linewidth=fwhm_plot_fwhm_linewidth * 2.5,\n",
     "    markersize=fwhm_plot_fwhm_markersize,\n",
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
-    "    color=branch_1_color,\n",
+    "    color=branch_underlying_colour,\n",
     ")\n",
     "plt.plot(\n",
     "    [\n",
@@ -598,7 +598,7 @@
     "    linewidth=fwhm_plot_fwhm_linewidth,\n",
     "    markersize=fwhm_plot_fwhm_markersize,\n",
     "    linestyle=fwhm_plot_fwhm_linestyle,\n",
-    "    color=branch_2_color,\n",
+    "    color=branch_overlying_colour,\n",
     ")\n",
     "plt.xlabel(\"Distance (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
     "plt.ylabel(\"Height (nm)\", fontsize=fwhm_plot_axlabel_fontsize, fontname=figure_text_font)\n",
