--- a/fig-ordered-tracing.ipynb
+++ b/fig-ordered-tracing.ipynb
@@ -14,12 +14,87 @@
     "import matplotlib.pyplot as plt\n",
     "from topostats.io import LoadScans\n",
     "from topostats.plotting import Colormap\n",
+    "from scipy.ndimage import binary_dilation\n",
     "\n",
     "colormap = Colormap()\n",
     "cmap = colormap.get_cmap()\n",
     "vmin = -3\n",
     "vmax = 4\n",
-    "square_markersize_figsize_20 = 3.8"
+    "square_markersize_figsize_20 = 3.8\n",
+    "plt.rcParams[\"font.family\"] = \"Arial\"\n",
+    "good_pixels_colormap = \"cool\"\n",
+    "good_pixels_alpha = 0.8\n",
+    "bad_pixels_colormap = \"cool_r\"\n",
+    "bad_pixels_alpha = 0.8\n",
+    "regular_pixels_colormap = \"gray\"\n",
+    "regular_pixels_alpha = 0.3\n",
+    "branch_underlying_colour = \"#500094\"\n",
+    "branch_overlying_colour = \"#D4A7FF\"\n",
+    "good_mask_color = \"#3792AF\"\n",
+    "good_mask_alpha = 0.8\n",
+    "import matplotlib.colors as mcolors\n",
+    "\n",
+    "\n",
+    "def overlay_mask(mask: npt.NDArray, colour: str) -> None:\n",
+    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
+    "    # Convert colour to RGBA with specified alpha\n",
+    "    rgba = mcolors.to_rgba(colour, good_mask_alpha)\n",
+    "    # Create an RGBA image where the mask is applied\n",
+    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
+    "    # Apply colour to the mask by multiplying each channel by the mask\n",
+    "    for i in range(3):  # RGB channels\n",
+    "        colored_mask[..., i] = mask * rgba[i]\n",
+    "    # Apply alpha channel\n",
+    "    colored_mask[..., 3] = mask * rgba[3]\n",
+    "    plt.imshow(colored_mask)\n",
+    "\n",
+    "\n",
+    "def dilate_branches_in_mask(\n",
+    "    branch_index_mask: npt.NDArray,\n",
+    "):\n",
+    "    \"\"\"Dilate a branch mask where the branches are dilated for visibility.\"\"\"\n",
+    "    branch_mask_dilated = np.zeros_like(branch_index_mask)\n",
+    "    for branch_index in np.unique(branch_index_mask):\n",
+    "        branch_mask = branch_index_mask == branch_index\n",
+    "        dilated_branch_mask = binary_dilation(branch_mask, iterations=1)\n",
+    "        branch_mask_dilated[dilated_branch_mask] = branch_index\n",
+    "    return branch_mask_dilated\n",
+    "\n",
+    "\n",
+    "def plot_overlay_dilated_branches_in_mask(branch_index_mask: npt.NDArray, colourmap: str = None, alpha=1):\n",
+    "    \"\"\"Plot a branch mask where the branches are dilated for visibility.\"\"\"\n",
+    "    branch_mask_dilated = dilate_branches_in_mask(branch_index_mask)\n",
+    "    plt.imshow(np.ma.masked_where(branch_mask_dilated == 0, branch_mask_dilated), cmap=colourmap, alpha=alpha)\n",
+    "\n",
+    "\n",
+    "def overlay_mask_with_specific_colour(mask: npt.NDArray, colour: str, alpha: float) -> None:\n",
+    "    \"\"\"Overlay a binary mask on the current figure using a specified colour.\"\"\"\n",
+    "    # Convert colour to RGBA with specified alpha\n",
+    "    rgba = mcolors.to_rgba(colour, alpha)\n",
+    "    # Create an RGBA image where the mask is applied\n",
+    "    colored_mask = np.zeros(mask.shape + (4,), dtype=np.float32)\n",
+    "    # Apply colour to the mask by multiplying each channel by the mask\n",
+    "    for i in range(3):  # RGB channels\n",
+    "        colored_mask[..., i] = mask * rgba[i]\n",
+    "    # Apply alpha channel\n",
+    "    colored_mask[..., 3] = mask * rgba[3]\n",
+    "    plt.imshow(colored_mask)\n",
+    "\n",
+    "\n",
+    "def plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "    branch_index_mask: npt.NDArray, colours: dict[int, str], alpha: float = 1\n",
+    ") -> None:\n",
+    "    \"\"\"Plot a branch mask where the branches are dilated for visibility, using specific colours for each branch.\"\"\"\n",
+    "    # check that the number of colours matches the number of unique branches\n",
+    "    unique_branches = np.unique(branch_index_mask)\n",
+    "    # drop the 0 from the unique branches\n",
+    "    unique_branches = unique_branches[unique_branches != 0]\n",
+    "    print(f\"unique branches: {unique_branches}\")\n",
+    "    assert len(colours) == len(unique_branches), \"Number of colours must match number of unique branches\"\n",
+    "    branch_mask_dilated = dilate_branches_in_mask(branch_index_mask)\n",
+    "    for branch_index in unique_branches:\n",
+    "        branch_mask = branch_mask_dilated == branch_index\n",
+    "        overlay_mask_with_specific_colour(mask=branch_mask, colour=colours[branch_index], alpha=alpha)"
    ]
   },
   {
@@ -71,15 +146,9 @@
    "outputs": [],
    "source": [
     "# colouring by branch index\n",
-    "# create a mask the the branch indexes\n",
-    "image_disordered_traces_grain1_branch_indexes_mask = np.ma.masked_where(\n",
-    "    image_disordered_traces_grain1_branch_indexes == 0,\n",
-    "    image_disordered_traces_grain1_branch_indexes,\n",
-    ")\n",
-    "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(image_disordered_traces_grain1_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
+    "plot_overlay_dilated_branches_in_mask(image_disordered_traces_grain1_branch_indexes, colourmap=\"Accent\")\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-branch-indexes\", bbox_inches=\"tight\")\n",
     "plt.show()"
@@ -95,8 +164,7 @@
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "ordered_skeleton_mask = image_disordered_traces_grain1_branch_indexes.astype(bool)\n",
-    "ordered_skeleton_mask_ma = np.ma.masked_where(~ordered_skeleton_mask, ordered_skeleton_mask)\n",
-    "ax.imshow(ordered_skeleton_mask_ma, cmap=\"summer\", alpha=1)\n",
+    "plot_overlay_dilated_branches_in_mask(ordered_skeleton_mask, colourmap=good_pixels_colormap, alpha=good_pixels_alpha)\n",
     "\n",
     "for node_id, node_image_data in image_nodestats_images_grain1[\"nodes\"].items():\n",
     "    print(f\"node_id: {node_id}\")\n",
@@ -115,18 +183,21 @@
     "    # plt.show()\n",
     "\n",
     "    # make masked array for node branch mask\n",
-    "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
-    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "    print(np.unique(node_branch_mask))\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "    )\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-branch-crossings\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "picoz_spline_g1_m0_coords = image_dict[\"splining\"][\"above\"][\"grain_1\"][\"mol_0\"][\"spline_coords\"]\n",
     "plt.imshow(image_nodestats_images_grain1_grain_image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.plot(\n",
     "    picoz_spline_g1_m0_coords[:, 1],\n",
     "    picoz_spline_g1_m0_coords[:, 0],\n",
     "    color=\"#2578B1\",\n",
-    "    linewidth=3,\n",
+    "    linewidth=4,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-picoz-mol-0-splined\", bbox_inches=\"tight\")\n",
     "plt.show()"
@@ -165,13 +236,10 @@
     "plt.show()\n",
     "\n",
     "cat_disordered_traces_grain0_branch_indexes = cat_image_dict[\"disordered_traces\"][\"above\"][\"grain_0\"][\"branch_indexes\"]\n",
-    "cat_disordered_traces_grain0_branch_indexes_mask = np.ma.masked_where(\n",
-    "    cat_disordered_traces_grain0_branch_indexes == 0,\n",
-    "    cat_disordered_traces_grain0_branch_indexes,\n",
-    ")\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(cat_disordered_traces_grain0_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
+    "plot_overlay_dilated_branches_in_mask(cat_disordered_traces_grain0_branch_indexes, colourmap=\"Accent\")\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-branch-indexes-cat\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
@@ -187,11 +255,15 @@
     "cat_image_nodestats = cat_image_dict[\"nodestats\"][\"above\"]\n",
     "cat_image_nodestats_images_grain0 = cat_image_nodestats[\"images\"][\"grain_0\"]\n",
     "cat_image_nodestats_images_grain0_nodes = cat_image_nodestats_images_grain0[\"nodes\"]\n",
+    "plot_overlay_dilated_branches_in_mask(\n",
+    "    cat_disordered_traces_grain0_branch_indexes.astype(bool), colourmap=good_pixels_colormap, alpha=good_pixels_alpha\n",
+    ")\n",
     "for node_id, node_image_data in cat_image_nodestats_images_grain0_nodes.items():\n",
     "    print(f\"node_id: {node_id}\")\n",
     "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
-    "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
-    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "    )\n",
     "    print(node_branch_mask.shape)\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-crossings-cats-image\", bbox_inches=\"tight\")\n",
     "\n",
@@ -212,7 +284,26 @@
     "    linewidth=cat_molecule_trace_linewidth,\n",
     ")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-molecules-cats-image\", bbox_inches=\"tight\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# splined molecules\n",
+    "cat_splined_coords_mol0 = cat_image_dict[\"splining\"][\"above\"][\"grain_0\"][\"mol_0\"][\"spline_coords\"]\n",
+    "cat_splined_coords_mol1 = cat_image_dict[\"splining\"][\"above\"][\"grain_0\"][\"mol_1\"][\"spline_coords\"]\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "ax.imshow(cat_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "ax.plot(\n",
+    "    cat_splined_coords_mol0[:, 1],\n",
+    "    cat_splined_coords_mol0[:, 0],\n",
+    "    color=\"#2578B1\",\n",
+    "    linewidth=4,\n",
+    ")\n",
+    "ax.plot(\n",
+    "    cat_splined_coords_mol1[:, 1],\n",
+    "    cat_splined_coords_mol1[:, 0],\n",
+    "    color=\"#27B125\",\n",
+    "    linewidth=4,\n",
+    ")\n",
+    "plt.savefig(figure_dir / f\"fig-ordered-tracing-cats-splined\", bbox_inches=\"tight\")"
    ]
   },
   {
@@ -288,8 +379,8 @@
     "]\n",
     "print(f\"node 1 branch 0 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm}\")\n",
     "print(f\"node 1 branch 1 fwhm: {overlapping_nodestats_stats_grain_node1_branch_stats_1_fwhm}\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_0_heights, label=\"node 1 branch 0\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_1_heights, label=\"node 1 branch 1\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_0_heights, label=\"node 1 branch 0\", color=branch_underlying_colour)\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node1_branch_stats_1_heights, label=\"node 1 branch 1\", color=branch_overlying_colour)\n",
     "plt.axhline(\n",
     "    overlapping_nodestats_stats_grain_node1_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
     "    color=\"gray\",\n",
@@ -312,7 +403,9 @@
     ")\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
-    "ax.imshow(overlapping_molecules_disordered_traces_grain_branch_indexes_mask, cmap=\"Accent\", alpha=1)\n",
+    "plot_overlay_dilated_branches_in_mask(\n",
+    "    overlapping_molecules_disordered_traces_grain_branch_indexes, colourmap=\"Accent\"\n",
+    ")\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-indexes\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
@@ -338,8 +431,8 @@
     "overlapping_splining_grain_mol1 = overlapping_splining_grain[\"mol_1\"][\"spline_coords\"]\n",
     "print(f\"node 2 branch 0 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm}\")\n",
     "print(f\"node 2 branch 1 fwhm: {overlapping_nodestats_stats_grain_node2_branch_stats_1_fwhm}\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\")\n",
-    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_1_heights, label=\"node 2 branch 1\")\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_0_heights, label=\"node 2 branch 0\", color=branch_underlying_colour)\n",
+    "plt.plot(overlapping_nodestats_stats_grain_node2_branch_stats_1_heights, label=\"node 2 branch 1\", color=branch_overlying_colour)\n",
     "plt.axhline(\n",
     "    overlapping_nodestats_stats_grain_node2_branch_stats_0_fwhm[\"half_maxs\"][2],\n",
     "    color=\"gray\",\n",
@@ -359,11 +452,18 @@
     "# plot branch crossings\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "ax.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
+    "plot_overlay_dilated_branches_in_mask(\n",
+    "    overlapping_molecules_disordered_traces_grain_branch_indexes.astype(bool),\n",
+    "    colourmap=good_pixels_colormap,\n",
+    "    alpha=good_pixels_alpha,\n",
+    ")\n",
     "for node_id, node_image_data in overlapping_nodestats_images_grain[\"nodes\"].items():\n",
     "    print(f\"node_id: {node_id}\")\n",
     "    node_branch_mask = node_image_data[\"node_branch_mask\"]\n",
     "    node_branch_mask_ma = np.ma.masked_where(node_branch_mask == 0, node_branch_mask)\n",
-    "    ax.imshow(node_branch_mask_ma, cmap=\"cool\", alpha=1)\n",
+    "    plot_overlay_dilated_branches_in_mask_specific_colours(\n",
+    "        node_branch_mask, colours={1: branch_underlying_colour, 2: branch_overlying_colour}, alpha=0.8\n",
+    "    )\n",
     "plt.axis(\"off\")\n",
     "plt.savefig(figure_dir / f\"fig-ordered-tracing-overlapping-molecules-branch-crossings\", bbox_inches=\"tight\")\n",
     "plt.show()\n",
@@ -386,7 +486,8 @@
     "plt.show()\n",
     "\n",
     "# plot molecules with splines\n",
-    "overlapping_mol_linewidth = 7\n",
+    "fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "overlapping_mol_linewidth = 4\n",
     "plt.imshow(overlapping_crop, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "plt.plot(\n",
     "    overlapping_splining_grain_mol0[:, 1],\n",
